--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-
+pip
+setuptools
 argparse==1.2.1
 boto==2.38.0
 docopt==0.6.1
-factory-boy==2.8.1
-fake-factory==0.5.7
 marshmallow==2.13.1
 mock==1.0.1
-MySQL-python==1.2.5
-networkx==1.8.1
 python-dateutil==2.4.2
 pytest==3.0.5
 pytest-cov==2.4.0
