--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,71 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+*.py[co]
 
-# C extensions
-*.so
+# Log files
+logs/
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
+# Packages
 *.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
 
 # Installer logs
 pip-log.txt
-pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
 .coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
+.tox
 
 # Translations
 *.mo
-*.pot
 
-# Django stuff:
-*.log
-local_settings.py
+# Mr Developer
+.mr.developer.cfg
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Mac files
+*.DS_Store
 
-# Scrapy stuff:
-.scrapy
+*.save
 
-# Sphinx documentation
-docs/_build/
+# Custom settings
+settings_env.py
 
-# PyBuilder
-target/
+# PID file
+*.pid
 
-# IPython Notebook
-.ipynb_checkpoints
+# PyCharm
+.idea
 
-# pyenv
-.python-version
+*#
+*~
 
-# celery beat schedule file
-celerybeat-schedule
+# Ninja-IDE
+*.nja
 
-# dotenv
-.env
+config/es_settings.py
+config/settings.py
 
-# virtualenv
-venv/
-ENV/
+# Group structure built pkl (stage6 fixture)
+tests/fixture/generated_data/structure_fixture_build.pkl
 
-# Spyder project settings
-.spyderproject
+# Org config symlink
+org/configs
 
-# Rope project settings
+# User config symlink
+user/configs
+
+# Rope project
 .ropeproject
+
+# swp files
+*.swp
+
+/venv
+.cache
